Blackpurl/src/objects/Suppress_CO_Item__c.object
<CustomObject>
    <fields>
        <fullName>CO_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CO Header</label>
        <referenceTo>CO_Header__c</referenceTo>
        <relationshipLabel>Suppress CO Items</relationshipLabel>
        <relationshipName>Suppress_CO_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>Suppress CO Items</relationshipLabel>
        <relationshipName>Suppress_CO_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Suppress_CO_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Suppress CO Item</label>
    <nameField>
        <displayFormat>SCOI-{000000}</displayFormat>
        <label>Supress CO Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suppress CO Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>